After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683850 - gst-plugins-bad: opus + jpegformat: unbreak non-debug build
gst-plugins-bad: opus + jpegformat: unbreak non-debug build
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-09-12 07:30 UTC by Peter Korsgaard
Modified: 2012-09-12 08:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch fixing issue (2.71 KB, patch)
2012-09-12 07:30 UTC, Peter Korsgaard
committed Details | Review

Description Peter Korsgaard 2012-09-12 07:30:50 UTC
Created attachment 224070 [details] [review]
patch fixing issue

opus + jpegformat plugin builds fail when gstreamer is configured with
--disable-gst-debug as they are checking the GST_DISABLE_DEBUG symbol
instead of GST_DISABLE_GST_DEBUG.
Comment 1 Tim-Philipp Müller 2012-09-12 08:16:03 UTC
Thanks, pushed:


commit b04e61d8a4488ced6143150a11bd46988514ff4c
Author: Peter Korsgaard <jacmet@sunsite.dk>
Date:   Wed Sep 12 09:10:35 2012 +0200

    opus + jpegformat: unbreak non-debug build
    
    opus + jpegformat plugin builds fail when gstreamer is configured with
    --disable-gst-debug as they are checking the GST_DISABLE_DEBUG symbol
    instead of GST_DISABLE_GST_DEBUG.
    
    Signed-off-by: Peter Korsgaard <jacmet@sunsite.dk>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=683850